fix: left panel scroll and stretched item image

--- a/src/components/ItemImage/ItemImage.css
+++ b/src/components/ItemImage/ItemImage.css
@@ -7,7 +7,7 @@
 }
 
 .ItemImage.image-wrapper .image {
-  width: 100%;
+  width: auto;
 }
 
 .ItemImage .ItemBadge {
